# Advanced-Multiprocessor-Programming

./: README.md  data.csv  data.ipynb  lock_free.hpp  new.csv  peterson  peterson.cpp  peterson_output.txt
.ipynb_checkpoints/: Code.ipynb  Peterson.cpp
amp/: Makefile
amp/data/: results.csv  results_small_bench.csv  thread_specific.csv
amp/src/: base_queue.hpp  benchmark.hpp  fine_lock.hpp  library.cpp  lock_free_aba.hpp  lock_guard.hpp
example/: Makefile  README  benchmark.py  run_nebula.sh
example/data/2025-11-04T16:43:04/avg/: smallbench_100.data
lea/amp/: Makefile  README  benchmark_large.py  benchmark_results.csv  benchmark_wrapper.cpp  fine_lock_queue_test.cpp  run_nebula.sh
lea/amp/data/: results_small_bench.csv  single.csv
lea/amp/plots/: avg_plot.tex
lea/amp/src/: benchmark.hpp  library.cpp  lock_free_aba.hpp  test  test_tsan
nebula/: Makefile
nebula/amp/: Makefile  evaluation.py
nebula/amp/data/: results_balanced_specific.csv  results_thread_specific.csv
nebula/amp/includes/: timer.hpp
nebula/amp/src/: base_queue.hpp  benchmark.hpp  sequential.hpp  tagged_ptr.hpp
nebula/data/: results_balanced_specific.csv  results_thread_specific.csv
nebula/src/: benchmark.hpp  fine_lock.hpp  library.cpp  lock_free_aba.hpp  lock_guard.hpp  sequential.hpp
project/: CMakeLists.txt
project/AMP/project/data/2025-11-04T16:43:04/avg/: smallbench_10.data
project/AMP/project/src/: library.c
project/benchmarks/: CMakeLists.txt  main.cpp
project/include/: atomic.hpp  base_queue.hpp  basic_structures.hpp  benchmark.hpp  double_lock.hpp  fine_lock.hpp  generics.hpp  global_lock.hpp  lock_free.hpp  lock_free_aba.hpp  lock_guard.hpp  sequential.hpp  structures.hpp  tagged_pointer.hpp  timer.hpp
project/src/: a.out  atomic.cpp  atomic_structures.cpp  basic_structures.cpp  double_lock.cpp  fine_lock.cpp  global_lock.cpp  main.cpp  sequential.cpp  sizes.cpp  test.cpp
project/tests/: CMakeLists.txt  tagged_ptr.cpp  test_freelist.cpp  test_global_lock.cpp  test_queue_seq.cpp  test_timer.cpp
